fixing photo cropper overlay

--- a/src/styles/components/_photo-uploader.scss
+++ b/src/styles/components/_photo-uploader.scss
@@ -101,6 +101,7 @@
 
 .ReactModal__Overlay {
 	background-color: rgba(0, 0, 0, 0.80);
+	z-index: 99;
 
 }
 
